--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/chat/chat",
+    "pages/webview/webview",
     "pages/logs/logs"
   ],
   "window": {
