--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniprogram-ts-less-quickstart",
+  "name": "rrai-wx",
   "version": "1.0.0",
   "description": "",
   "scripts": {},
@@ -7,9 +7,8 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "wxml-to-canvas": "^1.1.1"
   },
   "devDependencies": {
-    "miniprogram-api-typings": "^2.8.3-1"
+    "miniprogram-api-typings": "^2.12.0"
   }
 }
