--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,7 @@
   "projectname": "rrai-wx",
   "setting": {
     "compileHotReLoad": true,
-    "urlCheck": true
+    "urlCheck": false
   },
   "libVersion": "2.30.0"
 }
