--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
   "compileType": "miniprogram",
   "projectname": "rrai-wx",
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -50,8 +50,7 @@
     "useCompilerPlugins": [
       "typescript"
     ],
-    "ignoreUploadUnusedFiles": false,
-    "condition": true
+    "ignoreUploadUnusedFiles": false
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
