--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "keywords": [],
   "author": "",
   "license": "",
-  "dependencies": {
-  },
   "devDependencies": {
     "miniprogram-api-typings": "^2.12.0"
+  },
+  "dependencies": {
+    "@miniprogram-component-plus/tabs": "^1.0.0"
   }
 }
