--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,6 +9,7 @@
       "pages": [
         "pages/chat/chat",
         "pages/rr/rr",
+        "pages/openai-image/index",
         "pages/image-edit/image-edit"
       ]
     },
