--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -36,6 +36,12 @@
     "navigationBarTextStyle": "white"
   },
   "style": "v2",
+  "plugins": {
+    "WechatSI": {
+      "version": "0.3.5",
+      "provider": "wx069ba97219f66d99"
+    }
+  },
   "sitemapLocation": "sitemap.json",
   "useExtendedLib": {
     "weui": true
