--- a/project.config.json
+++ b/project.config.json
@@ -1,12 +1,7 @@
 {
   "description": "项目配置文件",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
   "miniprogramRoot": "miniprogram/",
   "compileType": "miniprogram",
-  "projectname": "rrai-wx",
   "setting": {
     "urlCheck": false,
     "es6": true,
@@ -27,8 +22,6 @@
     "compileHotReLoad": true,
     "lazyloadPlaceholderEnable": false,
     "useMultiFrameRuntime": false,
-    "useApiHook": false,
-    "useApiHostProcess": false,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -51,16 +44,21 @@
       "typescript"
     ],
     "ignoreUploadUnusedFiles": true,
-    "condition": true
+    "condition": true,
+    "useApiHook": false,
+    "useApiHostProcess": false
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "srcMiniprogramRoot": "miniprogram/",
-  "appid": "wxdebf9bfe7a033f29",
-  "libVersion": "2.30.1",
   "editorSetting": {
     "tabIndent": "insertSpaces",
     "tabSize": 2
   },
-  "condition": {}
+  "condition": {},
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "appid": "wxdebf9bfe7a033f29"
 }
