--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/webview/webview"
+    "pages/webview/webview",
+    "pages/product/index"
   ],
   "subpackages": [
     {
